[gd_scene load_steps=7 format=3 uid="uid://c4dhcvii0mvng"]

[ext_resource type="Script" path="res://scenes/interface/user_interface.gd" id="1_gjny0"]
[ext_resource type="Texture2D" uid="uid://5gsfaig0vr4" path="res://assets/2d/ui/ui_background.png" id="1_ibuv3"]
[ext_resource type="Texture2D" uid="uid://dm7basocv5eyc" path="res://assets/2d/ui/icons/drone_icon.png" id="2_yg00l"]
[ext_resource type="FontFile" uid="uid://c2e7lrbtylo6" path="res://assets/2d/ui/fonts/BrunoAceSC-Regular.ttf" id="3_81uii"]
[ext_resource type="Texture2D" uid="uid://qm0qaw04xsm3" path="res://assets/2d/ui/icons/defense_drone_icon.png" id="5_716ev"]
[ext_resource type="PackedScene" uid="uid://bdwbmbc8dyngo" path="res://scenes/interface/ui_buttons.tscn" id="5_mrkbf"]

[node name="user_interface" type="Control"]
layout_mode = 3
anchor_top = 0.907
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.263977
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_gjny0")

[node name="outer_margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_top = 10

[node name="TextureRect" type="TextureRect" parent="outer_margin"]
layout_mode = 2
texture = ExtResource("1_ibuv3")
expand_mode = 1

[node name="inner_margin" type="MarginContainer" parent="outer_margin"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="h_info_container" type="HBoxContainer" parent="outer_margin/inner_margin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="outer_margin/inner_margin/h_info_container"]
layout_mode = 2
texture = ExtResource("2_yg00l")
stretch_mode = 3

[node name="max_label" type="Label" parent="outer_margin/inner_margin/h_info_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_81uii")
theme_override_font_sizes/font_size = 16
text = "Max:"
vertical_alignment = 1

[node name="max_value" type="Label" parent="outer_margin/inner_margin/h_info_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_81uii")
theme_override_font_sizes/font_size = 18
text = "3"
vertical_alignment = 1

[node name="available_label" type="Label" parent="outer_margin/inner_margin/h_info_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_81uii")
theme_override_font_sizes/font_size = 16
text = " Available:"
vertical_alignment = 1

[node name="available_value" type="Label" parent="outer_margin/inner_margin/h_info_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_81uii")
theme_override_font_sizes/font_size = 18
text = "3"
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="outer_margin/inner_margin/h_info_container"]
layout_mode = 2
texture = ExtResource("5_716ev")
stretch_mode = 3

[node name="max_def_drone_label" type="Label" parent="outer_margin/inner_margin/h_info_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_81uii")
theme_override_font_sizes/font_size = 16
text = "Max:"
vertical_alignment = 1

[node name="max_def_drone_value" type="Label" parent="outer_margin/inner_margin/h_info_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_81uii")
theme_override_font_sizes/font_size = 18
text = "3"
vertical_alignment = 1

[node name="available_def_drone_label" type="Label" parent="outer_margin/inner_margin/h_info_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_81uii")
theme_override_font_sizes/font_size = 16
text = " Available:"
vertical_alignment = 1

[node name="available_def_drone_value" type="Label" parent="outer_margin/inner_margin/h_info_container"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_81uii")
theme_override_font_sizes/font_size = 18
text = "3"
vertical_alignment = 1

[node name="buttons" parent="outer_margin/inner_margin" instance=ExtResource("5_mrkbf")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
